# pl-horizontal

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.github/actions/set-version/: action.yml
.github/workflows/: python-publish.yml
pl_col_collapse/: __init__.py
pl_horizontal/: __init__.py  _expr_builders.py  typing.py
src/: arg_first_null.rs  arg_max.rs  arg_minmax.rs  arg_true.rs  collapse.rs  expressions.rs  is_minmax.rs  lib.rs  multi_index.rs
tests/: bench.py  conftest.py  test_arg_first_null.py  test_arg_max.py  test_arg_min.py  test_arg_true.py  test_collapse_columns.py  test_is_minmax.py  test_main.py  test_multi_index.py
