[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=1.3.0"]
build-backend = "maturin"

[project]
name = "pl-horizontal"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "maturin>=1.9.3",
    "polars<=1.32.1",
    "pytest-benchmark>=5.1.0",
]

[tool.maturin]
module-name = "pl_horizontal._internal"

[dependency-groups]
dev = [
    "mimesis>=18.0.0",
    "numpy>=2.3.2",
    "pytest>=8.3.5",
    "pytest-cov",
    "pytest-doctestplus>=1.4.0",
    "pytest-randomly>=3.16.0",
]
